# Systerm

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
Systerm/: __init__.py  _setup.py  console.py  exit.py  file.py  instance.py  math.py  meta.py  module.py  random.py  time.py  version.py
docs/: index.md
tests/: test_Systerm.py
