[metadata]
name		= Systerm
version		= 0.4.0
author		= ZytroCode
url			= https://github.com/ZytroCode/Systerm
license		= MIT
description	= A multipurpose python library

long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
zip_safe = no

[options.package_data]
Systerm = py.typed

[options.extras_require]
testing =
    pytest
    mypy
